# freebSGai

./: README_GUI.md  config.json  debug_camera.py  debug_gui_state.py  debug_physics_issue.py  debug_simulation.py  debug_update_entities.py  diagnostic_simulation.py  diagnostic_test.py  final_verification.py  gui_main.py  main.py  run_gui_test.py  test_b_key_function.py  test_camera.py  test_camera_fix.py  test_collision_logic.py  test_display_issue.py  test_fix_verification.py  test_id_fix.py  test_physics_simulation.py  test_zoom_issue.py
entities/: entity.py
freebSEngine/: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml
freebSEngine/benchmarks/: benchmark_basic.py
freebSEngine/examples/: advanced_usage.py  basic_usage.py  quick_start.ipynb
freebSEngine/python/freebSEngine/: __init__.py  _python_fallback.py  advanced_mechanics.py  celestial_objects.py  demo.py  logging_config.py  utils.py
freebSEngine/src/: lib.rs
freebSEngine/tests/: test_basic.py
gui/: __init__.py  gui_manager.py
observation/: observer.py
physics/: collision.py  gravity.py  motion.py  simulation.py
time_manager/: time_manager.py
utils/: helpers.py
